<resources>
    <string name="app_name">DD-WRT Companion</string>
    <string name="default_router_name">DD-WRT Router</string>
    <string name="banner_ad_unit_id_router_management_activity">ca-app-pub-3313772302702554/6719283628</string>
    <string name="banner_ad_unit_id_main_activity">ca-app-pub-3313772302702554/8196016824</string>
    <string name="interstitial_ad_unit_id_router_list_to_router_main">ca-app-pub-3313772302702554/6440082025</string>
    <string name="interstitial_ad_unit_id_tile_click">ca-app-pub-3313772302702554/4963348824</string>
    <string name="interstitial_ad_unit_id_wireless_network_generate_qr_code">ca-app-pub-3313772302702554/3486615626</string>
    <string name="interstitial_ad_unit_id_open_active_ip_connections_activity">ca-app-pub-3313772302702554/2009882429</string>
    <string name="interstitial_ad_unit_id_transtion_to_wan_monthly_chart">ca-app-pub-3313772302702554/9533149224</string>
    <string name="banner_ad_unit_id_wan_monthly_traffic_chart">ca-app-pub-3313772302702554/9672750020</string>
    <string name="banner_ad_unit_id_active_ip_connections">ca-app-pub-3313772302702554/2149483223</string>
    <string name="interstitial_ad_unit_id_app_exit">ca-app-pub-3313772302702554/8056416028</string>
    <string name="banner_ad_unit_id_router_selection_in_widgets">ca-app-pub-3313772302702554/5102949629</string>
    <string name="banner_ad_unit_id_router_add_dialog">ca-app-pub-3313772302702554/6579682825</string>
    <string name="banner_ad_unit_id_router_restore_dialog">ca-app-pub-3313772302702554/8875184422</string>
    <string name="banner_ad_unit_id_help">ca-app-pub-3313772302702554/7889901625</string>
    <string name="interstitial_ad_unit_id_web_exit">ca-app-pub-3313772302702554/7610700021</string>
    <string name="interstitial_ad_unit_id_wireless_network_security_settings">ca-app-pub-3313772302702554/9993048025</string>
    <string name="donation_paypal_item">Donation</string>
    <string name="navigation_drawer_items_array_item1_header">Status</string>
    <string name="navigation_drawer_items_array_item2_header">Services</string>
    <string name="navigation_drawer_items_array_item3_header">Admin Area</string>
    <string name="navigation_drawer_items_array_item4_header">Toolbox</string>
    <string name="router_connection_proto_select">Select connection method</string>
    <string name="router_firmware_select">Select firmware or let us guess</string>
    <string name="status">Status</string>
    <string name="status_router">Router</string>
    <string name="status_wan">WAN</string>
    <string name="status_lan">LAN</string>
    <string name="status_time">Time</string>
    <string name="status_wireless">Wireless</string>
    <string name="status_bandwidth">Bandwidth</string>
    <string name="status_syslog">Syslog</string>
    <string name="status_sysinfo">Sys-Info</string>
    <string name="setup">Setup</string>
    <string name="setup_basic">Basic</string>
    <string name="setup_ipv6">IPv6</string>
    <string name="setup_ddns">DDNS</string>
    <string name="setup_mac_cloning">MAC Cloning</string>
    <string name="setup_routing">Routing</string>
    <string name="setup_vlans">VLAN</string>
    <string name="setup_networking">Networking</string>
    <string name="setup_eoip">EoIP</string>
    <string name="wireless">Wireless</string>
    <string name="wireless_basic_settings">Basic</string>
    <string name="wireless_radius">Radius</string>
    <string name="wireless_security">Security</string>
    <string name="wireless_mac_filter">MAC Filtering</string>
    <string name="wireless_wl">WL</string>
    <string name="wireless_wl0">WL0</string>
    <string name="wireless_wl1">WL1</string>
    <string name="services">Services</string>
    <string name="services_services">Services</string>
    <string name="services_freeradius">FreeRadius</string>
    <string name="services_ppoe">PPoE</string>
    <string name="services_vpn">VPN</string>
    <string name="services_usb">USB</string>
    <string name="services_nas">NAS</string>
    <string name="services_hostspot">HotSpot</string>
    <string name="services_sip">SIP</string>
    <string name="services_adblocking">Adblocking</string>
    <string name="services_webserver">WebServer</string>
    <string name="security">Security</string>
    <string name="security_firewall">Firewall</string>
    <string name="security_vpn_passthrough">VPN Passthrough</string>
    <string name="access_restrictions">Access Restrictions</string>
    <string name="access_restrictions_wan">WAN Access</string>
    <string name="nat_qos">NAT &amp; QoS</string>
    <string name="nat_qos_port_forwarding">Port Fwd</string>
    <string name="nat_qos_port_range_forwarding">Port Range Fwd</string>
    <string name="nat_qos_port_trigger">Port Trigger</string>
    <string name="nat_qos_upnp">UPnP</string>
    <string name="nat_qos_dmz">DMZ</string>
    <string name="nat_qos_qos">QoS</string>
    <string name="admin_area">Admin Area</string>
    <string name="admin_area_mgmt">Management</string>
    <string name="admin_area_keep_alive">Keep Alive</string>
    <string name="admin_area_cmds">Commands</string>
    <string name="admin_area_wol">WOL</string>
    <string name="admin_area_nvram">NVRAM</string>
    <string name="admin_area_factory">Factory Defaults</string>
    <string name="admin_area_upgrade">Upgrade</string>
    <string name="admin_area_backup">Backup</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Save &amp; Apply</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">No Data - Feature Coming Soon!</string>
    <string name="crash_toast_text">Whoops - App Crash detected! Thank you for taking the time to report the issues, so our monkeys can fix them all.</string>
    <string name="crash_ok_dialog_text">Great. We\'ll look into the issue as soon as possible. Thank you very much.</string>
    <string name="title">Title</string>
    <string name="loading">-</string>
    <string name="tile_status_router_router_state_title">Router State</string>
    <string name="router_state_tile_dl_rate">DL</string>
    <string name="router_state_tile_ul_rate">UL</string>
    <string name="unknown">\?\?\?</string>
    <string name="menuitem_refresh">Refresh</string>
    <string name="menuitem_settings">Settings</string>
    <string name="status_dhcp">DHCP</string>
    <string name="title_activity_router_management">RouterManagementActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="toolbox">Toolbox</string>
    <string name="router_add_new">New</string>
    <string name="cancel">Cancel</string>
    <string name="add_router">Add</string>
    <string name="update_router">Update</string>
    <string name="router_add_msg">Add a new router</string>
    <string name="router_add_dialog_msg">See http://rm3l.org/apps/ddwrt-companion/ddwrt/ssh for instructions on how to setup SSH on your DD-WRT router.</string>
    <string name="router_add_dialog_msg_ads">See http://rm3l.org/apps/ddwrt-companion/ddwrt/_ssh for instructions on how to setup SSH on your DD-WRT router.</string>
    <string name="router_add_dialog_msg_openwrt">See http://rm3l.org/apps/ddwrt-companion/openwrt/ssh for instructions on how to setup SSH on your OpenWrt router.</string>
    <string name="router_add_dialog_msg_openwrt_ads">See http://rm3l.org/apps/ddwrt-companion/openwrt/_ssh for instructions on how to setup SSH on your OpenWrt router.</string>
    <string name="router_update_msg">Update router</string>
    <string name="router_add_connection_unsuccessful">Could not connect to router</string>
    <string name="router_add_dns_or_ip_invalid">Invalid DNS name or IP Address</string>
    <string name="router_add_port_invalid">Invalid Port</string>
    <string name="router_add_username_invalid">Please enter the SSH Username</string>
    <string name="router_add_password_invalid">Please enter the Password</string>
    <string name="router_add_privkey_invalid">Please specify the Private Key</string>
    <string name="router_add_password_or_privkey_invalid">Please specify a password or a private key</string>
    <string name="router_add_internal_error">Whoops - Internal Error. Sorry, try again later.</string>
    <string name="router_add_path_to_privkey">Select SSH Private key (if any)</string>
    <string name="router_add_strict_host_key_checking">Strict Host Key Checking</string>
    <string name="router_add_password_may_be_empty">Password or key passphrase (may be empty)</string>
    <string name="router_add_login">Login (e.g., root)</string>
    <string name="router_add_port">SSH Port</string>
    <string name="router_add_default_ssh_port">22</string>
    <string name="router_add_dns_or_ip">DNS or IP (e.g., 172.17.17.1 or routerlogin.net)</string>
    <string name="router_add_name">Router Name</string>
    <string name="action_remove">Remove</string>
    <string name="selected_count">%1$s selected</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_copy">Copy as new</string>
    <string name="menuitem_donate">Donate</string>
    <string name="menuitem_about">About</string>
    <string name="support_app">Support DD-WRT Companion</string>
    <string name="wan_config_configuration">Configuration</string>
    <string name="error_placeholder">Error placeholder</string>
    <string name="wan_config_connection_type">Connection Type</string>
    <string name="one_space" />
    <string name="wan_config_connection_uptime">Connection Uptime</string>
    <string name="wan_config_wan_mac">WAN MAC</string>
    <string name="wan_config_wan_ip">WAN IP</string>
    <string name="wan_config_subnet_mask">Subnet Mask</string>
    <string name="wan_config_gateway">Gateway</string>
    <string name="pref_title_theme">Theme</string>
    <string name="sort">Sort</string>
    <string name="share">Share</string>
    <string name="sort_z_a"><![CDATA[Sort Z->A]]></string>
    <string name="sort_a_z"><![CDATA[Sort A->Z]]></string>
    <string name="sort_default">Default Sorting</string>
    <string name="pref_enable_acra">Help improve the app</string>
    <string name="pref_acra_disabled">Disabled</string>
    <string name="pref_acra_enabled">Great - thanks. In case of a crash, anonymous logs may be sent out to find and fix the issue quickly. These logs will never contain sensitive data such as passwords.</string>
    <string name="pref_acra_syslog_enabled">Enabled. System Logs are great for helping fix bugs, but this may lead to privacy issues as some other apps might log private data like user account names, opened URLs, calendar events…</string>
    <string name="pref_acra_syslog_disabled">Disabled</string>
    <string name="pref_acra_syslog">Include System Logs</string>
    <string name="pref_acra_deviceid">Include Device ID in crash reports</string>
    <string name="pref_acra_deviceid_enabled">Enabled</string>
    <string name="pref_acra_deviceid_disabled">Disabled</string>
    <string name="seen_recently">Seen Recently</string>
    <string name="not_seen_recently">Not Seen Recently</string>
    <string name="reset_sort_prefs">Reset Sort Preferences</string>
    <string name="hide_inactive_hosts">Hide Inactive Hosts</string>
    <string name="reset_counters">Reset counters</string>
    <string name="set_alias">Set Alias</string>
    <string name="wake_on_lan">Wake on LAN</string>
    <string name="wan_access">Internet Access</string>
    <string name="data_usage_theme">Data Usage Control</string>
    <string name="view_active_ip_connections">View IP Connections</string>
    <string name="new_router">New router</string>
    <string name="register_new_router">Register a new router</string>
    <string name="new_router_disabled">New router (disabled)</string>
</resources>