<?xml version="1.0" encoding="utf-8"?><!--
DD-WRT Companion is a mobile app that lets you connect to,
monitor and manage your DD-WRT routers on the go.

Copyright (C) 2014  Armel Soro

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

Contact Info: Armel Soro &lt;apps+ddwrt AT rm3l DOT org&gt;
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Theming -->
    <PreferenceCategory
        android:key="@string/pref_header_theming"
        android:title="Theming">

        <org.rm3l.ddwrt.utils.LongListPreference
            android:defaultValue="31"
            android:entries="@array/pref_theme_titles"
            android:entryValues="@array/pref_theme_values"
            android:key="theming"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_theme" />

    </PreferenceCategory>

    <!-- General -->
    <PreferenceCategory
        android:key="@string/pref_header_general"
        android:title="General">

        <org.rm3l.ddwrt.utils.LongListPreference
            android:defaultValue="444"
            android:entries="@array/data_usage_titles"
            android:entryValues="@array/data_usage_values"
            android:key="data_usage_network"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/data_usage_theme" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="alwaysCheckConnection"
            android:summary="Always check actual connection prior to adding or updating an entry"
            android:title="Connection Check" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Error Reporting">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="acra.enable"
            android:summaryOff="@string/pref_acra_disabled"
            android:summaryOn="@string/pref_acra_enabled"
            android:title="@string/pref_enable_acra" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="acra.syslog.enable"
            android:summaryOff="@string/pref_acra_syslog_disabled"
            android:summaryOn="@string/pref_acra_syslog_enabled"
            android:title="@string/pref_acra_syslog" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="acra.deviceid.enable"
            android:summaryOff="@string/pref_acra_deviceid_disabled"
            android:summaryOn="@string/pref_acra_deviceid_enabled"
            android:title="@string/pref_acra_deviceid" />

    </PreferenceCategory>

</PreferenceScreen>