<?xml version="1.0" encoding="utf-8"?><!-- DD-WRT Companion is a mobile app 
	that lets you connect to, monitor and manage your DD-WRT routers on the go. 
	Copyright (C) 2014 Armel Soro This program is free software: you can redistribute 
	it and/or modify it under the terms of the GNU General Public License as 
	published by the Free Software Foundation, either version 3 of the License, 
	or (at your option) any later version. This program is distributed in the 
	hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied 
	warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
	GNU General Public License for more details. You should have received a copy 
	of the GNU General Public License along with this program. If not, see <http://www.gnu.org/licenses/>. 
	Contact Info: Armel Soro &lt;apps+ddwrt AT rm3l DOT org&gt; -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item android:id="@+id/tile_status_wireless_client_rename"
		android:orderInCategory="1" android:title="@string/set_alias"
		app:showAsAction="never" />

	<item android:id="@+id/tile_status_wireless_client_wol"
		android:orderInCategory="2" android:title="@string/wake_on_lan"
		app:showAsAction="never" />

	<!-- Active IP Connections -->
	<item
		android:id="@+id/tile_status_wireless_client_view_active_ip_connections"
		android:checkable="false" android:orderInCategory="3"
		android:title="@string/view_active_ip_connections"
		app:showAsAction="never" />

	<item
		android:id="@+id/tile_status_wireless_client_wan_access_state"
		android:checkable="true" android:orderInCategory="4"
		android:title="@string/wan_access" app:showAsAction="never" />

</menu>