<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- TODO
        android:icon="@drawable/compose_icon"
        -->
    <shortcut
        android:shortcutId="register-router"
        android:enabled="true"
        android:shortcutShortLabel="@string/new_router"
        android:shortcutLongLabel="@string/register_new_router"
        android:shortcutDisabledMessage="@string/new_router_disabled">
        <!-- FIXME Change fo other flavors (Lite, ...) -->
        <!-- Determine if we need to allow to open the 'Add Router' wizard -->
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="org.rm3l.ddwrt"
            android:targetClass="org.rm3l.ddwrt.mgmt.register.ManageRouterFragmentActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list is what the user sees when they
             launch this shortcut. -->
        <!--<categories android:name="android.shortcut.conversation" />-->
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>

