<?xml version="1.0" encoding="utf-8"?>
<!--
DD-WRT Companion is a mobile app that lets you connect to,
monitor and manage your DD-WRT routers on the go.

Copyright (C) 2014  Armel Soro

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

Contact Info: Armel Soro &lt;apps+ddwrt AT rm3l DOT org&gt;
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Sort -->
    <group>
        <item
            android:id="@+id/tile_admin_nvram_sort_default"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:orderInCategory="1"
            android:showAsAction="ifRoom"
            android:title="@string/sort_default" />

        <item
            android:id="@+id/tile_admin_nvram_sort_asc"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:orderInCategory="2"
            android:showAsAction="ifRoom"
            android:title="@string/sort_a_z" />

        <item
            android:id="@+id/tile_admin_nvram_sort_desc"
            android:orderInCategory="3"
            android:showAsAction="ifRoom"
            android:title="@string/sort_z_a" />
    </group>

    <item
        android:id="@+id/tile_admin_nvram_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/share"
        android:actionProviderClass="android.widget.ShareActionProvider" />

</menu>