<?xml version="1.0" encoding="utf-8"?>
<!--
DD-WRT Companion is a mobile app that lets you connect to,
monitor and manage your DD-WRT routers on the go.

Copyright (C) 2014  Armel Soro

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

Contact Info: Armel Soro &lt;apps+ddwrt AT rm3l DOT org&gt;
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/router_add_notification_viewgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/router_add_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <EditText
                android:id="@+id/router_add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="16dp"
                android:hint="@string/router_add_name"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text" />

            <EditText
                android:id="@+id/router_add_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:hint="@string/router_add_dns_or_ip"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text" />

            <EditText
                android:id="@+id/router_add_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:hint="@string/router_add_port"
                android:imeOptions="flagNoExtractUi"
                android:inputType="numberSigned"
                android:text="@string/router_add_default_ssh_port" />

            <Spinner
                android:id="@+id/router_add_proto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/router_connection_protocols_array"
                android:imeOptions="flagNoExtractUi"
                android:prompt="@string/router_connection_proto_select" />

            <EditText
                android:id="@+id/router_add_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:hint="@string/router_add_login"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/router_add_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:hint="@string/router_add_password_may_be_empty"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/router_add_privkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:hint="@string/router_add_path_to_privkey" />

            <TextView
                android:id="@+id/router_add_privkey_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/router_add_is_strict_host_key_checking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:imeOptions="flagNoExtractUi"
                android:text="@string/router_add_strict_host_key_checking" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>