<!--
DD-WRT Companion is a mobile app that lets you connect to,
monitor and manage your DD-WRT routers on the go.

Copyright (C) 2014  Armel Soro

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

Contact Info: Armel Soro &lt;apps+ddwrt AT rm3l DOT org&gt;
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.rm3l.ddwrt.mgmt.RouterManagementActivity">
    <item
        android:id="@+id/router_list_refresh"
        android:alphabeticShortcut="r"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menuitem_refresh" />

    <item
        android:id="@+id/router_list_feedback"
        android:alphabeticShortcut="f"
        android:icon="@drawable/ic_action_action_thumbs_up_down"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/feedback" />

    <item
        android:id="@+id/router_list_settings"
        android:alphabeticShortcut="s"
        android:icon="@drawable/ic_action_action_settings"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/menuitem_settings" />

    <item
        android:id="@+id/router_list_donate"
        android:alphabeticShortcut="d"
        android:icon="@drawable/ic_action_action_payment"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/menuitem_donate"
        />

    <item
        android:id="@+id/router_list_about"
        android:alphabeticShortcut="a"
        android:icon="@drawable/ic_action_social_person"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/menuitem_about" />

</menu>
