<?xml version="1.0" encoding="utf-8"?>
<!--
DD-WRT Companion is a mobile app that lets you connect to,
monitor and manage your DD-WRT routers on the go.

Copyright (C) 2014  Armel Soro

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

Contact Info: Armel Soro &lt;apps+ddwrt AT rm3l DOT org&gt;
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_router_item_edit"
        android:icon="@drawable/ic_action_editor_mode_edit"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_edit" />

    <item
        android:id="@+id/menu_router_item_copy"
        android:icon="@drawable/ic_action_content_content_copy"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_copy" />

    <item
        android:id="@+id/menu_router_list_delete"
        android:icon="@drawable/ic_action_remove"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:title="@string/action_remove" />

</menu>